--- a/ux/res/style/Button.css
+++ b/ux/res/style/Button.css
@@ -6,6 +6,6 @@ Button {
     text-color:   #fff;
     content:      "Text";
     region:       0l 0t 0r 80h;
-    image-align:  left top, 900ms ease;
+    image-align:  left top, 900ms ease-in;
     opacity:      0.1;
 }
