--- a/ux/res/style/Button.css
+++ b/ux/res/style/Button.css
@@ -1,13 +1,14 @@
 Button {
-    fill-area:    l32 t32 r32 b32, 200ms ease-in;
+    fill-area:    l32 t32 r-32 b-32, 200ms quad;
     fill-radius:  32 32 32 0;
     fill-color:   #24fa;
     image-src:    "menu.png";
-    image-region:  5l 5t 5r 5b, 200ms ease-in;
-    image-align:  left top, 900ms ease-in;
+    image-region:  l5 t5 r-5 b-5;
+    image-align:  left top;
+    text-area:    l96 t0 r-96 b0;
     text-color:   #fff;
-    text-align:   middle middle, 200ms ease-in;
-    content:      "Text";
+    text-align:   middle middle, 200ms back out;
+    content:      "Hello.";
     opacity:      0.8;
 }
 
@@ -15,12 +16,12 @@ Button:hover {
     opacity:      1.0;
     fill-color:   #24ff;
     text-color:   #fff;
-    text-align:   right middle, 200ms ease-in;
+    text-align:   right middle, 200ms back out;
 }
 
 
 Button:active {
-    fill-area:    l64 t64 r64 b64, 200ms ease-in;
+    fill-area:    l64 t64 r-64 b-64, 200ms back out;
     opacity:      1.0;
     fill-color:   #84ff;
     text-color:   #fffa;
